
  * fsck: Fix up any broken links and misplaced content caused by the
    directory hash calculation bug fixed in the last release.
  * sync: Sync to lower cost remotes first.
  * unused: Reduce memory usage significantly. Still not constant
    space, but now only needs to store the set of file contents that
    are present in the annex in memory.
  * status: Fixed to run in constant space.

 -- Joey Hess <joeyh@debian.org>  Sat, 10 Mar 2012 14:03:22 -0400

git-annex (3.20120309) unstable; urgency=low

  * Fix key directory hash calculation code to behave as it did before 
    version 3.20120227 when a key contains non-ascii characters (only
    WORM backend is likely to have been affected).

 -- Joey Hess <joeyh@debian.org>  Fri, 09 Mar 2012 20:05:09 -0400

git-annex (3.20120230) unstable; urgency=low

  * "here" can be used to refer to the current repository,
    which can read better than the old "." (which still works too).
  * Directory special remotes now support chunking files written to them,
    avoiding writing files larger than a specified size.
  * Add progress bar display to the directory special remote.
  * Add configurable hooks that are run when git-annex starts and stops
    using a remote: remote.name.annex-start-command and
    remote.name.annex-stop-command
  * Fix a bug in symlink calculation code, that triggered in rare
    cases where an annexed file is in a subdirectory that nearly
    matched to the .git/annex/object/xx/yy subdirectories.

 -- Joey Hess <joeyh@debian.org>  Mon, 05 Mar 2012 13:38:13 -0400

git-annex (3.20120229) unstable; urgency=low

  * Fix test suite to not require a unicode locale.
  * Fix cabal build failure. Thanks, Sergei Trofimovich

 -- Joey Hess <joeyh@debian.org>  Wed, 29 Feb 2012 02:31:31 -0400

git-annex (3.20120227) unstable; urgency=low

  * Modifications to support ghc 7.4's handling of filenames.
    This version can only be built with ghc 7.4 or newer. See the ghc7.0
    branch for older ghcs.